# IdenVault-TOOL

./: .gitignore  RELEASE_NOTES_v1_4_0.md
.github/workflows/: build-release.yml
IdenVault/: Cargo.toml
IdenVault-fixed/: Cargo.toml  README.md  build.rs
IdenVault-fixed/c_src/: vault_catalog.c  vault_core.h  vault_crypto.c  vault_engine.c  vault_ffi.c  vault_fuse.c  vault_monitor.c
IdenVault-fixed/core_linux/: vault_ffi.c  vault_ffi.h
IdenVault-fixed/src/: crypto.rs  log.rs  main.rs  manual.rs  path_assistant.rs  vault.rs
IdenVault-fixed/src/c_src/: vault_core.h  vault_engine.c  vault_ffi.c
IdenVault/c_src/: vault_sandbox.c
IdenVault/scripts/: nautilus_idenvault.py
IdenVault/src/: main.rs  sys_info.rs
IdenVault/tests/: security_exploit.rs
