[package]
name = "IdenVault"
version = "1.4.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "IdenVault"
path = "src/main.rs"

[dependencies]
# CLI / Interação
colored = "3.1.1"
inquire = "0.9.4"
rustyline = "17.0.2"
rfd = "0.15.2"
tokei = "14.0.0"

# System & FS
sysinfo = "0.38.4"
home = "0.5.12"
chrono = "0.4"
ctrlc = "3.5.2"

# Crypto
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"

# Utilitários
hex = "0.4.3"

[build-dependencies]
cc = "1.1"

[package.metadata.bundle]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true